# tiny_renderer

./: CMakeLists.txt  display.c  display.h  geometry.h  main.c  matrix.c  matrix.h  raster.c  raster.h  raytracer.c  raytracer.h  vector.c  vector.h
